[project]
name = "drones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bluesky-simulator>=1.1.1",
    "folium>=0.20.0",
    "formdt>=0.6.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-matlab-proxy>=0.18.0",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyproj>=3.7.2",
    "pyqt6>=6.11.0",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This is the "Magic" for Flat Layouts
[tool.hatch.build.targets.wheel]
include = [
    "cli.py",
    "drone_delivery_sf_realdata_visualization.py",
    "optimize.py",
    "optimize_viz.py",
    "realdata.py",
    "simulator.py",
    "config.py"
]

[project.scripts]
simulate = "cli:main"
